--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ project(aStarC)
 
 add_executable(${PROJECT_NAME})
 
+set(SOURCES src/main.c src/engine.c src/grid.c)
+
 target_compile_options(${PROJECT_NAME} PRIVATE ${COMPILE_OPTIONS})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBRARIES})
-target_sources(${PROJECT_NAME} PRIVATE src/main.c)
+target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
